--- a/package.json
+++ b/package.json
@@ -55,38 +55,38 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@typescript-eslint/utils": "8.8.0",
+        "@csmith/release-it-calver-plugin": "2023.12.0",
+        "@eslint/js": "9.12.0",
+        "@types/eslint__js": "8.42.3",
+        "@types/mongoose-aggregate-paginate-v2": "1.0.12",
+        "@types/react": "18.3.11",
+        "@types/react-dom": "18.3.1",
+        "@types/uuid": "10.0.0",
+        "@types/yargs": "17.0.33",
+        "@typescript-eslint/utils": "8.8.1",
         "auto-changelog": "2.5.0",
         "chalk": "4.1.0",
-        "eslint": "9.11.1",
+        "eslint": "9.12.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "graphql": "16.9.0",
         "husky": "9.1.6",
         "lint-staged": "15.2.10",
-        "mongoose": "8.7.0",
+        "mongoose": "8.7.1",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
         "ora": "5.4.1",
         "prettier": "3.3.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "release-it": "17.6.0",
+        "release-it": "17.8.2",
         "rimraf": "6.0.1",
         "tsup": "8.3.0",
         "tsx": "4.19.1",
-        "typescript": "5.6.2",
-        "typescript-eslint": "8.8.0",
+        "typescript": "5.6.3",
+        "typescript-eslint": "8.8.1",
         "uuid": "10.0.0",
         "yargs": "17.7.2"
-    },
-    "devDependencies": {
-        "@csmith/release-it-calver-plugin": "2023.12.0",
-        "@types/mongoose-aggregate-paginate-v2": "1.0.12",
-        "@types/react": "18.3.11",
-        "@types/react-dom": "18.3.0",
-        "@types/uuid": "10.0.0",
-        "@types/yargs": "17.0.33"
     }
 }
