--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
     "name": "cyberskill",
     "version": "2024.10.10",
     "description": "CyberSkill Shared",
+    "homepage": "https://github.com/cyberskill-world/shared#readme",
+    "bugs": {
+        "url": "https://github.com/cyberskill-world/shared/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cyberskill-world/shared.git"
+    },
     "license": "MIT",
     "author": "Stephen Cheng",
     "type": "module",
@@ -51,7 +59,7 @@
         "lint:check": "npx tsx src/commands.ts lint:check",
         "lint:fix": "npx tsx src/commands.ts lint:fix",
         "prepare": "husky",
-        "release": "npm run build && npx release-it --only-version",
+        "release": "npm run build && dotenv release-it --",
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
@@ -66,6 +74,7 @@
         "@typescript-eslint/utils": "8.8.1",
         "auto-changelog": "2.5.0",
         "chalk": "4.1.0",
+        "dotenv-cli": "7.4.2",
         "eslint": "9.12.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
