--- a/package.json
+++ b/package.json
@@ -74,11 +74,13 @@
         "@typescript-eslint/utils": "8.10.0",
         "auto-changelog": "2.5.0",
         "chalk": "4.1.0",
+        "chalk-animation": "2.0.3",
         "dotenv-cli": "7.4.2",
         "eslint": "9.13.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-simple-import-sort": "12.1.1",
+        "figlet": "1.8.0",
         "graphql": "16.9.0",
         "husky": "9.1.6",
         "lint-staged": "15.2.10",
