--- a/package.json
+++ b/package.json
@@ -26,6 +26,38 @@
             "require": "./dist/configs/index.cjs",
             "import": "./dist/configs/index.js"
         },
+        "./configs/eslint": {
+            "require": "./dist/configs/eslint/eslint.base.cjs",
+            "import": "./dist/configs/eslint/eslint.base.js"
+        },
+        "./configs/eslint/cra": {
+            "require": "./dist/configs/eslint/eslint.cra.cjs",
+            "import": "./dist/configs/eslint/eslint.cra.js"
+        },
+        "./configs/eslint/nestjs": {
+            "require": "./dist/configs/eslint/eslint.nestjs.cjs",
+            "import": "./dist/configs/eslint/eslint.nestjs.js"
+        },
+        "./configs/eslint/nextjs": {
+            "require": "./dist/configs/eslint/eslint.nextjs.cjs",
+            "import": "./dist/configs/eslint/eslint.nextjs.js"
+        },
+        "./configs/eslint/nodejs": {
+            "require": "./dist/configs/eslint/eslint.nodejs.cjs",
+            "import": "./dist/configs/eslint/eslint.nodejs.js"
+        },
+        "./configs/eslint/vite": {
+            "require": "./dist/configs/eslint/eslint.vite.cjs",
+            "import": "./dist/configs/eslint/eslint.vite.js"
+        },
+        "./configs/prettier": {
+            "require": "./dist/configs/prettier/prettier.base.cjs",
+            "import": "./dist/configs/prettier/prettier.base.js"
+        },
+        "./configs/lint-staged": {
+            "require": "./dist/configs/lint-staged/lint-staged.base.cjs",
+            "import": "./dist/configs/lint-staged/lint-staged.base.js"
+        },
         "./constants": {
             "require": "./dist/constants/index.cjs",
             "import": "./dist/constants/index.js"
@@ -67,11 +99,11 @@
         "@eslint/js": "9.13.0",
         "@types/eslint__js": "8.42.3",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
-        "@types/react": "18.3.11",
+        "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
-        "@typescript-eslint/utils": "8.10.0",
+        "@typescript-eslint/utils": "8.11.0",
         "auto-changelog": "2.5.0",
         "chalk": "4.1.0",
         "chalk-animation": "2.0.3",
@@ -79,6 +111,8 @@
         "eslint": "9.13.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-react-hooks": "5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "0.4.13",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "figlet": "1.8.0",
         "graphql": "16.9.0",
@@ -96,7 +130,7 @@
         "tsup": "8.3.0",
         "tsx": "4.19.1",
         "typescript": "5.6.3",
-        "typescript-eslint": "8.10.0",
+        "typescript-eslint": "8.11.0",
         "uuid": "10.0.0",
         "yargs": "17.7.2"
     }
