feat: update libs

--- a/package.json
+++ b/package.json
@@ -105,10 +105,11 @@
         "@types/yargs": "17.0.33",
         "@typescript-eslint/utils": "8.11.0",
         "auto-changelog": "2.5.0",
-        "chalk": "4.1.0",
+        "chalk": "5.3.0",
         "chalk-animation": "2.0.3",
         "dotenv-cli": "7.4.2",
         "eslint": "9.13.0",
+        "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react-hooks": "5.1.0-rc.0",
@@ -121,7 +122,7 @@
         "mongoose": "8.7.2",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
-        "ora": "5.4.1",
+        "ora": "8.1.0",
         "prettier": "3.3.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
