--- a/package.json
+++ b/package.json
@@ -117,6 +117,8 @@
         "eslint": "9.13.0",
         "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "9.1.0",
+        "eslint-import-resolver-typescript": "3.6.3",
+        "eslint-plugin-import-x": "4.3.1",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react-hooks": "5.1.0-rc.0",
         "eslint-plugin-react-refresh": "0.4.13",
