--- a/package.json
+++ b/package.json
@@ -103,12 +103,14 @@
         "@commitlint/config-conventional": "19.5.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
         "@eslint/js": "9.13.0",
+        "@swc/core": "1.7.39",
         "@types/eslint__js": "8.42.3",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
+        "@typescript-eslint/parser": "8.11.0",
         "@typescript-eslint/utils": "8.11.0",
         "auto-changelog": "2.5.0",
         "chalk": "5.3.0",
@@ -118,9 +120,9 @@
         "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
-        "eslint-plugin-import-x": "4.3.1",
+        "eslint-plugin-import": "2.31.0",
         "eslint-plugin-prettier": "5.2.1",
-        "eslint-plugin-react-hooks": "5.1.0-rc.0",
+        "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.13",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "figlet": "1.8.0",
