feat: add generateShortId, generateSlug, aggregate to mongoose controller

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
         "@commitlint/config-conventional": "19.5.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
         "@eslint/js": "9.13.0",
-        "@swc/core": "1.7.39",
+        "@swc/core": "1.7.40",
         "@types/eslint__js": "8.42.3",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/react": "18.3.12",
@@ -115,6 +115,7 @@
         "auto-changelog": "2.5.0",
         "chalk": "5.3.0",
         "chalk-animation": "2.0.3",
+        "crypto-js": "4.2.0",
         "dotenv-cli": "7.4.2",
         "eslint": "9.13.0",
         "eslint-config-next": "15.0.1",
@@ -123,13 +124,13 @@
         "eslint-plugin-import": "2.31.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react-hooks": "5.0.0",
-        "eslint-plugin-react-refresh": "0.4.13",
+        "eslint-plugin-react-refresh": "0.4.14",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "figlet": "1.8.0",
         "graphql": "16.9.0",
         "husky": "9.1.6",
         "lint-staged": "15.2.10",
-        "mongoose": "8.7.2",
+        "mongoose": "8.7.3",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
         "ora": "8.1.0",
@@ -138,7 +139,8 @@
         "react-dom": "18.3.1",
         "release-it": "17.10.0",
         "rimraf": "6.0.1",
-        "tsup": "8.3.0",
+        "slugify": "1.6.6",
+        "tsup": "8.3.5",
         "tsx": "4.19.1",
         "typescript": "5.6.3",
         "typescript-eslint": "8.11.0",
