--- a/package.json
+++ b/package.json
@@ -110,15 +110,15 @@
         "@types/react-dom": "18.3.1",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
-        "@typescript-eslint/parser": "8.11.0",
-        "@typescript-eslint/utils": "8.11.0",
+        "@typescript-eslint/parser": "8.12.2",
+        "@typescript-eslint/utils": "8.12.2",
         "auto-changelog": "2.5.0",
+        "boxen": "8.0.1",
         "chalk": "5.3.0",
-        "chalk-animation": "2.0.3",
         "crypto-js": "4.2.0",
         "dotenv-cli": "7.4.2",
         "eslint": "9.13.0",
-        "eslint-config-next": "15.0.1",
+        "eslint-config-next": "15.0.2",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-import": "2.31.0",
@@ -126,7 +126,6 @@
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.14",
         "eslint-plugin-simple-import-sort": "12.1.1",
-        "figlet": "1.8.0",
         "graphql": "16.9.0",
         "husky": "9.1.6",
         "lint-staged": "15.2.10",
@@ -141,10 +140,10 @@
         "rimraf": "6.0.1",
         "slugify": "1.6.6",
         "tsup": "8.3.5",
-        "tsx": "4.19.1",
+        "tsx": "4.19.2",
         "typescript": "5.6.3",
-        "typescript-eslint": "8.11.0",
-        "uuid": "10.0.0",
+        "typescript-eslint": "8.12.2",
+        "uuid": "11.0.2",
         "yargs": "17.7.2"
     }
 }
