--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "lint:fix": "npx tsx src/commands.ts lint:fix",
         "prepare": "husky",
         "release": "npm run build && dotenv release-it -- --only-version",
+        "reset": "npx tsx src/commands.ts reset",
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
