--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
         "mongoose": "8.8.0",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
+        "node-fetch": "3.3.2",
         "ora": "8.1.1",
         "prettier": "3.3.3",
         "react": "18.3.1",
