--- a/package.json
+++ b/package.json
@@ -89,13 +89,13 @@
         "build": "rimraf dist && env NODE_ENV=production tsup",
         "clean": "rimraf node_modules package-lock.json && npm i -f",
         "dev": "rimraf dist && tsup --watch",
-        "lint-staged": "npx tsx src/commands.ts lint-staged",
-        "lint:check": "npx tsx src/commands.ts lint:check",
-        "lint:fix": "npx tsx src/commands.ts lint:fix",
+        "lint-staged": "npx --yes tsx src/commands.ts lint-staged",
+        "lint:check": "npx --yes tsx src/commands.ts lint:check",
+        "lint:fix": "npx --yes tsx src/commands.ts lint:fix",
         "prepare": "husky",
         "release": "npm run build && dotenv release-it -- --only-version",
-        "reset": "npx tsx src/commands.ts reset",
-        "setup": "npx tsx src/commands.ts setup"
+        "reset": "npx --yes tsx src/commands.ts reset",
+        "setup": "npx --yes tsx src/commands.ts setup"
     },
     "dependencies": {
         "@commitlint/cli": "19.5.0",
@@ -117,7 +117,7 @@
         "crypto-js": "4.2.0",
         "dotenv-cli": "7.4.2",
         "eslint": "9.14.0",
-        "eslint-config-next": "15.0.2",
+        "eslint-config-next": "15.0.3",
         "eslint-config-prettier": "9.1.0",
         "eslint-import-resolver-typescript": "3.6.3",
         "eslint-plugin-import": "2.31.0",
