--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "@swc/core": "1.9.1",
         "@types/eslint__js": "8.42.3",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
+        "@types/mongoose-paginate-v2": "1.6.4",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
         "@types/uuid": "10.0.0",
