--- a/package.json
+++ b/package.json
@@ -1,79 +1,71 @@
 {
     "name": "cyberskill",
+    "type": "module",
     "version": "2024.11.15",
     "description": "CyberSkill Shared",
+    "author": "Stephen Cheng",
+    "license": "MIT",
     "homepage": "https://github.com/cyberskill-world/shared#readme",
-    "bugs": {
-        "url": "https://github.com/cyberskill-world/shared/issues"
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cyberskill-world/shared.git"
     },
-    "license": "MIT",
-    "author": "Stephen Cheng",
-    "type": "module",
+    "bugs": {
+        "url": "https://github.com/cyberskill-world/shared/issues"
+    },
     "exports": {
         "./configs": {
-            "require": "./dist/configs/index.cjs",
-            "import": "./dist/configs/index.js"
+            "import": "./dist/configs/index.js",
+            "require": "./dist/configs/index.cjs"
         },
         "./configs/eslint": {
-            "require": "./dist/configs/eslint/eslint.base.cjs",
-            "import": "./dist/configs/eslint/eslint.base.js"
+            "import": "./dist/configs/eslint/eslint.base.js",
+            "require": "./dist/configs/eslint/eslint.base.cjs"
         },
         "./configs/eslint/cra": {
-            "require": "./dist/configs/eslint/eslint.cra.cjs",
-            "import": "./dist/configs/eslint/eslint.cra.js"
+            "import": "./dist/configs/eslint/eslint.cra.js",
+            "require": "./dist/configs/eslint/eslint.cra.cjs"
         },
         "./configs/eslint/nestjs": {
-            "require": "./dist/configs/eslint/eslint.nestjs.cjs",
-            "import": "./dist/configs/eslint/eslint.nestjs.js"
+            "import": "./dist/configs/eslint/eslint.nestjs.js",
+            "require": "./dist/configs/eslint/eslint.nestjs.cjs"
         },
         "./configs/eslint/nextjs": {
-            "require": "./dist/configs/eslint/eslint.nextjs.cjs",
-            "import": "./dist/configs/eslint/eslint.nextjs.js"
+            "import": "./dist/configs/eslint/eslint.nextjs.js",
+            "require": "./dist/configs/eslint/eslint.nextjs.cjs"
         },
         "./configs/eslint/nodejs": {
-            "require": "./dist/configs/eslint/eslint.nodejs.cjs",
-            "import": "./dist/configs/eslint/eslint.nodejs.js"
+            "import": "./dist/configs/eslint/eslint.nodejs.js",
+            "require": "./dist/configs/eslint/eslint.nodejs.cjs"
         },
         "./configs/eslint/vite": {
-            "require": "./dist/configs/eslint/eslint.vite.cjs",
-            "import": "./dist/configs/eslint/eslint.vite.js"
-        },
-        "./configs/prettier": {
-            "require": "./dist/configs/prettier/prettier.base.cjs",
-            "import": "./dist/configs/prettier/prettier.base.js"
-        },
-        "./configs/lint-staged": {
-            "require": "./dist/configs/lint-staged/lint-staged.base.cjs",
-            "import": "./dist/configs/lint-staged/lint-staged.base.js"
+            "import": "./dist/configs/eslint/eslint.vite.js",
+            "require": "./dist/configs/eslint/eslint.vite.cjs"
         },
         "./configs/commitlint": {
-            "require": "./dist/configs/commitlint/commitlint.base.cjs",
-            "import": "./dist/configs/commitlint/commitlint.base.js"
+            "import": "./dist/configs/commitlint/commitlint.base.js",
+            "require": "./dist/configs/commitlint/commitlint.base.cjs"
         },
         "./constants": {
-            "require": "./dist/constants/index.cjs",
-            "import": "./dist/constants/index.js"
+            "import": "./dist/constants/index.js",
+            "require": "./dist/constants/index.cjs"
         },
         "./controllers": {
-            "require": "./dist/controllers/index.cjs",
-            "import": "./dist/controllers/index.js"
+            "import": "./dist/controllers/index.js",
+            "require": "./dist/controllers/index.cjs"
         },
         "./assets/styles/reset.css": "./dist/assets/styles/reset.css",
         "./typescript": {
-            "require": "./dist/typescript/index.cjs",
-            "import": "./dist/typescript/index.js"
+            "import": "./dist/typescript/index.js",
+            "require": "./dist/typescript/index.cjs"
         },
         "./utils": {
-            "require": "./dist/utils/index.cjs",
-            "import": "./dist/utils/index.js"
+            "import": "./dist/utils/index.js",
+            "require": "./dist/utils/index.cjs"
         },
         "./commands": {
-            "require": "./dist/commands/index.cjs",
-            "import": "./dist/commands/index.js"
+            "import": "./dist/commands/index.js",
+            "require": "./dist/commands/index.cjs"
         }
     },
     "main": "./dist/index.js",
@@ -86,64 +78,59 @@
         "dist"
     ],
     "scripts": {
-        "build": "rimraf dist && env NODE_ENV=production tsup",
-        "clean": "rimraf node_modules package-lock.json && npm i -f",
-        "dev": "rimraf dist && tsup --watch",
-        "lint-staged": "npx --yes tsx src/commands.ts lint-staged",
-        "lint:check": "npx --yes tsx src/commands.ts lint:check",
+        "build": "npx --yes rimraf dist && env NODE_ENV=production tsup",
+        "clean": "npx --yes rimraf node_modules package-lock.json && npm i -f",
+        "dev": "npx --yes rimraf dist && tsup --watch",
+        "lint": "npx --yes tsx src/commands.ts lint",
         "lint:fix": "npx --yes tsx src/commands.ts lint:fix",
-        "prepare": "husky",
+        "lint:inspect": "npx --yes @eslint/config-inspector",
         "release": "npm run build && dotenv release-it -- --only-version",
         "reset": "npx --yes tsx src/commands.ts reset",
         "setup": "npx --yes tsx src/commands.ts setup"
     },
     "dependencies": {
+        "@antfu/eslint-config": "3.8.0",
         "@commitlint/cli": "19.5.0",
         "@commitlint/config-conventional": "19.5.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
-        "@eslint/js": "9.14.0",
-        "@swc/core": "1.9.1",
-        "@types/eslint__js": "8.42.3",
+        "@swc/core": "1.9.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
-        "@typescript-eslint/parser": "8.13.0",
-        "@typescript-eslint/utils": "8.13.0",
-        "auto-changelog": "2.5.0",
         "boxen": "8.0.1",
         "chalk": "5.3.0",
         "crypto-js": "4.2.0",
         "dotenv-cli": "7.4.2",
         "eslint": "9.14.0",
         "eslint-config-next": "15.0.3",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-import-resolver-typescript": "3.6.3",
-        "eslint-plugin-import": "2.31.0",
-        "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.14",
-        "eslint-plugin-simple-import-sort": "12.1.1",
         "graphql": "16.9.0",
-        "husky": "9.1.6",
-        "lint-staged": "15.2.10",
         "mongoose": "8.8.1",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
         "node-fetch": "3.3.2",
         "ora": "8.1.1",
-        "prettier": "3.3.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "release-it": "17.10.0",
-        "rimraf": "6.0.1",
         "slugify": "1.6.6",
         "tsup": "8.3.5",
-        "tsx": "4.19.2",
         "typescript": "5.6.3",
-        "typescript-eslint": "8.13.0",
-        "uuid": "11.0.2",
+        "uuid": "11.0.3",
         "yargs": "17.7.2"
+    },
+    "devDependencies": {
+        "simple-git-hooks": "2.11.1"
+    },
+    "simple-git-hooks": {
+        "pre-commit": "npx --yes lint-staged",
+        "commit-msg": "npx --no -- commitlint --edit $1"
+    },
+    "lint-staged": {
+        "**/*.(ts|tsx)": "npx --yes tsc --noEmit",
+        "*": "npx --yes eslint --fix"
     }
 }
