--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,31 +2,30 @@
     "compilerOptions": {
         /* Basic Options */
         "target": "ES6",
-        "module": "NodeNext",
-        "outDir": "dist",
-        "rootDir": "src",
         "lib": ["ESNext", "DOM", "DOM.Iterable"],
-        "declaration": true,
-        "declarationDir": "./dist",
-
-        /* Source Map Options */
-        "sourceMap": true,
-        "inlineSources": true,
-        "sourceRoot": "/",
-
-        /* Strict Type-Checking Options */
-        "strict": true,
-        "noImplicitAny": false,
+        "rootDir": "src",
+        "module": "NodeNext",
 
         /* Module Resolution Options */
         "moduleResolution": "NodeNext",
+        "allowJs": true,
+        "checkJs": false,
+        /* Strict Type-Checking Options */
+        "strict": true,
+        "noImplicitAny": false,
+        "declaration": true,
+        "declarationDir": "./dist",
+
+        "inlineSources": true,
+        "outDir": "dist",
+        /* Source Map Options */
+        "sourceMap": true,
+        "sourceRoot": "/",
         "esModuleInterop": true,
 
-        /* Advanced Options */
-        "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "allowJs": true,
-        "checkJs": false
+        /* Advanced Options */
+        "skipLibCheck": true
     },
     "include": ["src/**/*"]
 }
