--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "build": "npx --yes rimraf dist && env NODE_ENV=production tsup",
         "clean": "npx --yes rimraf node_modules package-lock.json && npm i -f",
         "dev": "npx --yes rimraf dist && tsup --watch",
+        "postinstall": "npx --yes simple-git-hooks",
         "lint": "npx --yes tsx src/commands.ts lint",
         "lint:fix": "npx --yes tsx src/commands.ts lint:fix",
         "lint:inspect": "npx --yes @eslint/config-inspector",
@@ -121,9 +122,6 @@
         "typescript": "5.6.3",
         "uuid": "11.0.3",
         "yargs": "17.7.2"
-    },
-    "devDependencies": {
-        "simple-git-hooks": "2.11.1"
     },
     "simple-git-hooks": {
         "pre-commit": "npx --yes lint-staged",
