--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.14",
         "graphql": "16.9.0",
+        "lint-staged": "15.2.10",
         "mongoose": "8.8.1",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
