--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
         "react-dom": "18.3.1",
         "release-it": "17.10.0",
         "rimraf": "6.0.1",
+        "simple-git-hooks": "2.11.1",
         "slugify": "1.6.6",
         "tsup": "8.3.5",
         "tsx": "4.19.2",
