--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
         "@csmith/release-it-calver-plugin": "2023.12.0",
         "@eslint/config-inspector": "0.5.6",
         "@swc/core": "1.9.2",
+        "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/mongoose-paginate-v2": "1.6.5",
         "@types/react": "18.3.12",
