--- a/package.json
+++ b/package.json
@@ -102,12 +102,13 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@antfu/eslint-config": "3.9.1",
-        "@commitlint/cli": "19.5.0",
-        "@commitlint/config-conventional": "19.5.0",
+        "@antfu/eslint-config": "3.11.2",
+        "@commitlint/cli": "19.6.0",
+        "@commitlint/config-conventional": "19.6.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
+        "@eslint-react/eslint-plugin": "1.17.1",
         "@eslint/config-inspector": "0.5.6",
-        "@swc/core": "1.9.2",
+        "@swc/core": "1.9.3",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/react": "18.3.12",
@@ -118,14 +119,15 @@
         "boxen": "8.0.1",
         "chalk": "5.3.0",
         "crypto-js": "4.2.0",
-        "dotenv-cli": "7.4.2",
+        "dotenv-cli": "7.4.4",
         "eslint": "9.15.0",
         "eslint-config-next": "15.0.3",
+        "eslint-plugin-format": "0.1.2",
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.14",
         "graphql": "16.9.0",
         "lint-staged": "15.2.10",
-        "mongoose": "8.8.1",
+        "mongoose": "8.8.3",
         "mongoose-aggregate-paginate-v2": "1.1.2",
         "mongoose-paginate-v2": "1.8.5",
         "node-fetch": "3.3.2",
@@ -138,7 +140,7 @@
         "slugify": "1.6.6",
         "tsup": "8.3.5",
         "tsx": "4.19.2",
-        "typescript": "5.6.3",
+        "typescript": "5.7.2",
         "uuid": "11.0.3",
         "yargs": "17.7.2"
     }
