--- a/package.json
+++ b/package.json
@@ -101,46 +101,47 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@antfu/eslint-config": "3.11.2",
-        "@commitlint/cli": "19.6.0",
+        "@antfu/eslint-config": "3.14.0",
+        "@commitlint/cli": "19.6.1",
         "@commitlint/config-conventional": "19.6.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
-        "@eslint-react/eslint-plugin": "1.17.2",
-        "@eslint/config-inspector": "0.5.6",
-        "@swc/core": "1.9.3",
+        "@eslint-react/eslint-plugin": "1.23.2",
+        "@eslint/config-inspector": "0.7.1",
+        "@swc/core": "1.10.7",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
-        "@types/react": "18.3.12",
-        "@types/react-dom": "18.3.1",
+        "@types/react": "19.0.7",
+        "@types/react-dom": "19.0.3",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
         "auto-changelog": "2.5.0",
         "boxen": "8.0.1",
-        "chalk": "5.3.0",
+        "chalk": "5.4.1",
         "crypto-js": "4.2.0",
-        "dotenv-cli": "7.4.4",
-        "eslint": "9.16.0",
-        "eslint-config-next": "15.0.3",
-        "eslint-plugin-format": "0.1.3",
-        "eslint-plugin-react-hooks": "5.0.0",
-        "eslint-plugin-react-refresh": "0.4.16",
-        "graphql": "16.9.0",
-        "lint-staged": "15.2.10",
-        "mongoose": "8.8.3",
+        "dotenv-cli": "8.0.0",
+        "eslint": "9.18.0",
+        "eslint-config-next": "15.1.4",
+        "eslint-plugin-format": "1.0.1",
+        "eslint-plugin-react-hooks": "5.1.0",
+        "eslint-plugin-react-refresh": "0.4.18",
+        "graphql": "16.10.0",
+        "lint-staged": "15.3.0",
+        "localforage": "1.10.0",
+        "mongoose": "8.9.5",
         "mongoose-aggregate-paginate-v2": "1.1.2",
-        "mongoose-paginate-v2": "1.8.5",
+        "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
         "ora": "8.1.1",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "release-it": "17.10.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "release-it": "18.1.1",
         "rimraf": "6.0.1",
         "simple-git-hooks": "2.11.1",
         "slugify": "1.6.6",
         "tsup": "8.3.5",
         "tsx": "4.19.2",
-        "typescript": "5.7.2",
-        "uuid": "11.0.3",
+        "typescript": "5.7.3",
+        "uuid": "11.0.5",
         "yargs": "17.7.2"
     }
 }
