--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
     "name": "cyberskill",
-    "type": "module",
     "version": "2025.1.1",
     "description": "CyberSkill Shared",
-    "author": "Stephen Cheng",
-    "license": "MIT",
     "homepage": "https://github.com/cyberskill-world/shared#readme",
+    "bugs": {
+        "url": "https://github.com/cyberskill-world/shared/issues"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/cyberskill-world/shared.git"
     },
-    "bugs": {
-        "url": "https://github.com/cyberskill-world/shared/issues"
-    },
+    "license": "MIT",
+    "author": "Stephen Cheng",
+    "type": "module",
     "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
+        },
         "./configs": {
             "types": "./dist/configs/index.d.ts",
             "import": "./dist/configs/index.js",
@@ -81,7 +86,7 @@
             "require": "./dist/commands/index.cjs"
         }
     },
-    "main": "./dist/index.js",
+    "main": "./dist/index.cjs",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "bin": {
@@ -101,16 +106,16 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@antfu/eslint-config": "3.14.0",
+        "@antfu/eslint-config": "4.1.0",
         "@commitlint/cli": "19.6.1",
         "@commitlint/config-conventional": "19.6.0",
         "@csmith/release-it-calver-plugin": "2023.12.0",
-        "@eslint-react/eslint-plugin": "1.23.2",
+        "@eslint-react/eslint-plugin": "1.26.0",
         "@eslint/config-inspector": "1.0.0",
-        "@swc/core": "1.10.7",
+        "@swc/core": "1.10.12",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
-        "@types/react": "19.0.7",
+        "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
@@ -119,26 +124,26 @@
         "chalk": "5.4.1",
         "crypto-js": "4.2.0",
         "dotenv-cli": "8.0.0",
-        "eslint": "9.18.0",
-        "eslint-config-next": "15.1.4",
+        "eslint": "9.19.0",
+        "eslint-config-next": "15.1.6",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.1.0",
         "eslint-plugin-react-refresh": "0.4.18",
         "graphql": "16.10.0",
-        "lint-staged": "15.4.1",
+        "lint-staged": "15.4.3",
         "localforage": "1.10.0",
-        "mongoose": "8.9.5",
-        "mongoose-aggregate-paginate-v2": "1.1.2",
+        "mongoose": "8.9.6",
+        "mongoose-aggregate-paginate-v2": "1.1.3",
         "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
         "ora": "8.1.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "release-it": "18.1.1",
+        "release-it": "18.1.2",
         "rimraf": "6.0.1",
         "simple-git-hooks": "2.11.1",
         "slugify": "1.6.6",
-        "tsup": "8.3.5",
+        "tsup": "8.3.6",
         "tsx": "4.19.2",
         "typescript": "5.7.3",
         "uuid": "11.0.5",
