--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "jsx": "react-jsx",
         "lib": [
             "ESNext",
             "DOM",
