feat: add test config for React

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
         "skipLibCheck": true
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "node_modules/mongoose-paginate-v2/index.d.ts",
+        "node_modules/mongoose-aggregate-paginate-v2/index.d.ts"
     ]
 }
