--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
             "import": "./dist/configs/index.js",
             "require": "./dist/configs/index.cjs"
         },
+        "./configs/commitlint": {
+            "types": "./dist/configs/commitlint/commitlint.base.d.ts",
+            "import": "./dist/configs/commitlint/commitlint.base.js",
+            "require": "./dist/configs/commitlint/commitlint.base.cjs"
+        },
         "./configs/eslint": {
             "types": "./dist/configs/eslint/eslint.base.d.ts",
             "import": "./dist/configs/eslint/eslint.base.js",
@@ -54,10 +59,15 @@
             "import": "./dist/configs/eslint/eslint.vite.js",
             "require": "./dist/configs/eslint/eslint.vite.cjs"
         },
-        "./configs/commitlint": {
-            "types": "./dist/configs/commitlint/commitlint.base.d.ts",
-            "import": "./dist/configs/commitlint/commitlint.base.js",
-            "require": "./dist/configs/commitlint/commitlint.base.cjs"
+        "./configs/vitest/react/e2e": {
+            "types": "./dist/configs/vitest/react/e2e.d.ts",
+            "import": "./dist/configs/vitest/react/e2e.js",
+            "require": "./dist/configs/vitest/react/e2e.cjs"
+        },
+        "./configs/vitest/react/unit": {
+            "types": "./dist/configs/vitest/react/unit.d.ts",
+            "import": "./dist/configs/vitest/react/unit.js",
+            "require": "./dist/configs/vitest/react/unit.cjs"
         },
         "./constants": {
             "types": "./dist/constants/index.d.ts",
@@ -111,37 +121,43 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@antfu/eslint-config": "4.1.0",
-        "@commitlint/cli": "19.6.1",
-        "@commitlint/config-conventional": "19.6.0",
+        "@antfu/eslint-config": "4.1.1",
+        "@commitlint/cli": "19.7.1",
+        "@commitlint/config-conventional": "19.7.1",
         "@csmith/release-it-calver-plugin": "2023.12.0",
-        "@eslint-react/eslint-plugin": "1.26.0",
+        "@eslint-react/eslint-plugin": "1.26.2",
         "@eslint/config-inspector": "1.0.0",
-        "@swc/core": "1.10.12",
+        "@swc/core": "1.10.14",
+        "@testing-library/jest-dom": "6.6.3",
+        "@testing-library/react": "16.2.0",
         "@types/crypto-js": "4.2.2",
         "@types/mongoose-aggregate-paginate-v2": "1.0.12",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@types/uuid": "10.0.0",
         "@types/yargs": "17.0.33",
+        "@vitejs/plugin-react-swc": "3.7.2",
+        "@vitest/browser": "3.0.5",
         "auto-changelog": "2.5.0",
         "boxen": "8.0.1",
         "chalk": "5.4.1",
         "crypto-js": "4.2.0",
         "dotenv-cli": "8.0.0",
-        "eslint": "9.19.0",
+        "eslint": "9.20.0",
         "eslint-config-next": "15.1.6",
         "eslint-plugin-format": "1.0.1",
         "eslint-plugin-react-hooks": "5.1.0",
         "eslint-plugin-react-refresh": "0.4.18",
         "graphql": "16.10.0",
+        "jsdom": "26.0.0",
         "lint-staged": "15.4.3",
         "localforage": "1.10.0",
-        "mongoose": "8.9.6",
+        "mongoose": "8.10.0",
         "mongoose-aggregate-paginate-v2": "1.1.3",
         "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
-        "ora": "8.1.1",
+        "ora": "8.2.0",
+        "playwright": "1.50.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "release-it": "18.1.2",
@@ -152,6 +168,8 @@
         "tsx": "4.19.2",
         "typescript": "5.7.3",
         "uuid": "11.0.5",
+        "vitest": "3.0.5",
+        "vitest-browser-react": "0.0.4",
         "yargs": "17.7.2"
     }
 }
