feat: add apollo client react

--- a/.release-it.json
+++ b/.release-it.json
@@ -18,7 +18,7 @@
     },
     "plugins": {
         "@csmith/release-it-calver-plugin": {
-            "format": "yyyy.mm.dd.minor",
+            "format": "yyyy.mm.minor",
             "increment": "calendar"
         }
     }
