--- a/package.json
+++ b/package.json
@@ -99,6 +99,16 @@
             "types": "./dist/commands/index.d.ts",
             "import": "./dist/commands/index.js",
             "require": "./dist/commands/index.cjs"
+        },
+        "./vendors/graphql/codegen": {
+            "types": "./vendors/graphql/codegen.d.ts",
+            "import": "./vendors/graphql/codegen.js",
+            "require": "./vendors/graphql/codegen.cjs"
+        },
+        "./vendors/graphql/apollo/client/react": {
+            "types": "./vendors/graphql/apollo/client/react/index.d.ts",
+            "import": "./vendors/graphql/apollo/client/react/index.js",
+            "require": "./vendors/graphql/apollo/client/react/index.cjs"
         }
     },
     "main": "./dist/index.cjs",
@@ -122,11 +132,15 @@
     },
     "dependencies": {
         "@antfu/eslint-config": "4.2.0",
+        "@apollo/client": "3.12.11",
         "@commitlint/cli": "19.7.1",
         "@commitlint/config-conventional": "19.7.1",
         "@csmith/release-it-calver-plugin": "2023.12.0",
         "@eslint-react/eslint-plugin": "1.26.2",
         "@eslint/config-inspector": "1.0.0",
+        "@graphql-codegen/cli": "5.0.4",
+        "@graphql-codegen/client-preset": "4.6.2",
+        "@graphql-codegen/typescript-react-apollo": "4.3.2",
         "@swc/core": "1.10.15",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.2.0",
@@ -149,6 +163,7 @@
         "eslint-plugin-react-hooks": "5.1.0",
         "eslint-plugin-react-refresh": "0.4.19",
         "graphql": "16.10.0",
+        "graphql-ws": "6.0.3",
         "jsdom": "26.0.0",
         "lint-staged": "15.4.3",
         "localforage": "1.10.0",
@@ -169,7 +184,7 @@
         "typescript": "5.7.3",
         "uuid": "11.0.5",
         "vitest": "3.0.5",
-        "vitest-browser-react": "0.1.0",
+        "vitest-browser-react": "0.1.1",
         "yargs": "17.7.2"
     }
 }
