feat: update libs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cyberskill",
     "type": "module",
-    "version": "2025.2.1-1.0",
+    "version": "2025.2.11",
     "description": "CyberSkill Shared",
     "author": "Stephen Cheng",
     "license": "MIT",
