feat: add support for scss

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cyberskill",
+    "name": "@cyberskill/shared",
     "type": "module",
     "version": "2025.2.21",
     "description": "CyberSkill Shared",
@@ -177,7 +177,6 @@
         "classnames": "2.5.1",
         "crypto-js": "4.2.0",
         "dotenv-cli": "8.0.0",
-        "esbuild-sass-plugin": "3.3.1",
         "eslint": "9.21.0",
         "eslint-config-next": "15.1.7",
         "eslint-plugin-format": "1.0.1",
@@ -189,12 +188,13 @@
         "jsdom": "26.0.0",
         "lint-staged": "15.4.3",
         "localforage": "1.10.0",
-        "mongoose": "8.10.1",
+        "mongoose": "8.10.2",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
         "ora": "8.2.0",
         "playwright": "1.50.1",
+        "postcss-modules": "6.0.1",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-i18next": "15.4.1",
@@ -203,7 +203,7 @@
         "sass": "1.85.1",
         "simple-git-hooks": "2.11.1",
         "slugify": "1.6.6",
-        "tsup": "8.3.6",
+        "tsup": "8.4.0",
         "tsx": "4.19.3",
         "typescript": "5.7.3",
         "uuid": "11.1.0",
