--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
         "skipLibCheck": true
     },
     "include": [
-        "src/**/*",
+        "src",
+        "global.d.ts",
         "node_modules/mongoose-paginate-v2/index.d.ts",
         "node_modules/mongoose-aggregate-paginate-v2/index.d.ts"
     ]
