--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@cyberskill/shared",
     "type": "module",
-    "version": "2025.2.1",
+    "version": "1.0.0",
     "description": "CyberSkill Shared",
     "author": "Stephen Cheng",
     "license": "MIT",
@@ -145,7 +145,7 @@
         "lint": "npx tsx src/commands.ts lint",
         "lint:fix": "npx tsx src/commands.ts lint:fix",
         "lint:inspect": "npx @eslint/config-inspector",
-        "release": "npm run build && dotenv release-it -- --only-version",
+        "release": "npm run build && dotenv semantic-release",
         "reset": "npx tsx src/commands.ts reset",
         "setup": "npx tsx src/commands.ts setup"
     },
@@ -154,7 +154,6 @@
         "@apollo/client": "3.13.1",
         "@commitlint/cli": "19.7.1",
         "@commitlint/config-conventional": "19.7.1",
-        "@csmith/release-it-calver-plugin": "2023.12.0",
         "@eslint-react/eslint-plugin": "1.27.0",
         "@eslint/config-inspector": "1.0.0",
         "@graphql-codegen/cli": "5.0.5",
@@ -171,7 +170,6 @@
         "@types/yargs": "17.0.33",
         "@vitejs/plugin-react-swc": "3.8.0",
         "@vitest/browser": "3.0.7",
-        "auto-changelog": "2.5.0",
         "boxen": "8.0.1",
         "chalk": "5.4.1",
         "classnames": "2.5.1",
@@ -198,7 +196,6 @@
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-i18next": "15.4.1",
-        "release-it": "18.1.2",
         "rimraf": "6.0.1",
         "sass": "1.85.1",
         "simple-git-hooks": "2.11.1",
@@ -210,5 +207,8 @@
         "vitest": "3.0.7",
         "vitest-browser-react": "0.1.1",
         "yargs": "17.7.2"
+    },
+    "devDependencies": {
+        "semantic-release": "24.2.3"
     }
 }
