--- a/package.json
+++ b/package.json
@@ -150,16 +150,16 @@
         "setup": "npx tsx src/commands.ts setup"
     },
     "dependencies": {
-        "@antfu/eslint-config": "4.4.0",
+        "@antfu/eslint-config": "4.5.1",
         "@apollo/client": "3.13.1",
         "@commitlint/cli": "19.7.1",
         "@commitlint/config-conventional": "19.7.1",
-        "@eslint-react/eslint-plugin": "1.30.1",
-        "@eslint/config-inspector": "1.0.1",
+        "@eslint-react/eslint-plugin": "1.30.2",
+        "@eslint/config-inspector": "1.0.2",
         "@graphql-codegen/cli": "5.0.5",
         "@graphql-codegen/client-preset": "4.6.4",
         "@graphql-codegen/typescript-react-apollo": "4.3.2",
-        "@swc/core": "1.11.6",
+        "@swc/core": "1.11.7",
         "@testing-library/jest-dom": "6.6.3",
         "@testing-library/react": "16.2.0",
         "@types/crypto-js": "4.2.2",
@@ -185,7 +185,7 @@
         "jsdom": "26.0.0",
         "lint-staged": "15.4.3",
         "localforage": "1.10.0",
-        "mongoose": "8.12.0",
+        "mongoose": "8.12.1",
         "mongoose-aggregate-paginate-v2": "1.1.4",
         "mongoose-paginate-v2": "1.9.0",
         "node-fetch": "3.3.2",
@@ -202,6 +202,7 @@
         "tsup": "8.4.0",
         "tsx": "4.19.3",
         "typescript": "5.8.2",
+        "unorm": "1.6.0",
         "uuid": "11.1.0",
         "vitest": "3.0.7",
         "vitest-browser-react": "0.1.1",
@@ -214,6 +215,7 @@
         "@semantic-release/github": "11.0.1",
         "@semantic-release/npm": "12.0.1",
         "@semantic-release/release-notes-generator": "14.0.3",
+        "@types/unorm": "1.3.31",
         "semantic-release": "24.2.3"
     },
     "publishConfig": {
